# psychopy-eyetracker-eyelogic

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
psychopy_eyetracker_eyelogic/: __init__.py
psychopy_eyetracker_eyelogic/eyelogic/: __init__.py  calibration.py  default_eyetracker.yaml  eyetracker.py  supported_config_settings.yaml
psychopy_eyetracker_eyelogic/eyelogic/psychopy/: __init__.py  calibration.py  default_eyetracker.yaml  eyetracker.py  settings.py  supported_config_settings.yaml
