[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-eyetracker-eyelogic"
version = "1.1.14"
description = "extension package for PsychoPy which adds support for EyeLogic eyetrackers to ioHub"
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "Freely Distributable"}
authors = [
  { name = "EyeLogic GmbH", email = "info@eyelogicsolutions.com" },
]
classifiers = [
  "License :: Freely Distributable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "eyelogic-sdk"
]

[tool.setuptools.packages.find]
where   = [""]
include = ["psychopy_eyetracker_eyelogic*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."psychopy.iohub.devices.eyetracker"]
eyelogic = "psychopy_eyetracker_eyelogic.eyelogic"

[project.entry-points."psychopy.experiment.components.settings.eyetracking"]
EyeLogicEyetrackerBackend = "psychopy_eyetracker_eyelogic.eyelogic.psychopy.settings.EyeLogicEyetrackerBackend"
